--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps =
-  Servo
-  RadioHead
+lib_deps = 
+	Servo
+	RadioHead
+	WiFiEsp
