feat(wifi): first impl of esp12e wifi module

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,13 +16,14 @@ board = uno
 framework = arduino
 lib_deps = 
 	Servo
-	RadioHead
-	WiFiEsp
 
 [env:esp12e]
 platform = espressif8266
-board = nodemcuv2
+board = nodemcu
 framework = arduino
 lib_deps = 
-	ESP32Servo	
-	WiFiEsp
+	Websockets
+	Neotimer
+platform_packages =
+  arduino@https://github.com/esp8266/Arduino.git
+
