fix(examples): scoped vehicle example usage

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ lib_deps =
 
 [env:esp12e]
 platform = espressif8266
-board = nodemcu
+board = esp12e
 framework = arduino
 lib_deps = 
 	Websockets
