--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,7 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 default_envs = esp12e
 
@@ -21,9 +22,6 @@ lib_deps =
 platform = espressif8266
 board = esp12e
 framework = arduino
-lib_deps = 
-	Websockets
-	Neotimer
-platform_packages =
-  arduino@https://github.com/esp8266/Arduino.git
-
+lib_deps = Websockets
+platform_packages = 
+	arduino@https://github.com/esp8266/Arduino.git
