--- a/platformio.ini
+++ b/platformio.ini
@@ -25,3 +25,12 @@ framework = arduino
 lib_deps = Websockets
 platform_packages = 
 	arduino@https://github.com/esp8266/Arduino.git
+
+[env:nodemcu]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+lib_deps = Websockets
+upload_port = /dev/ttyUSB0
+platform_packages = 
+	arduino@https://github.com/esp8266/Arduino.git
