--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ lib_deps =
 	Servo
 
 [env:esp12e]
-platform = espressif8266
+platform = espressif8266@2.6.3
 board = esp12e
 framework = arduino
 lib_deps = Websockets
@@ -27,7 +27,7 @@ platform_packages =
 	arduino@https://github.com/esp8266/Arduino.git
 
 [env:nodemcu]
-platform = espressif8266
+platform = espressif8266@2.6.3
 board = nodemcuv2
 framework = arduino
 lib_deps = Websockets
