--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,8 @@ lib_deps =
 platform = espressif8266@2.6.3
 board = esp12e
 framework = arduino
-lib_deps = Websockets
+lib_deps = 
+	Websockets
 platform_packages = 
 	arduino@https://github.com/esp8266/Arduino.git
 
@@ -30,6 +31,7 @@ platform_packages =
 platform = espressif8266@2.6.3
 board = nodemcuv2
 framework = arduino
-lib_deps = Websockets
+lib_deps = 
+	Websockets
 platform_packages = 
 	arduino@https://github.com/esp8266/Arduino.git
